# ChangeLog for app-emulation/emul-linux-x86-xlibs
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-xlibs/ChangeLog,v 1.5 2004/04/14 05:50:42 lv Exp $

  14 Apr 2004; Travis Tilley <lv@gentoo.org> emul-linux-x86-xlibs-1.1.ebuild:
  it seems xlibs 1.1 is broken for some people, so i'm going to mask it for now

*emul-linux-x86-xlibs-1.1 (13 Apr 2004)

  13 Apr 2004; <dvandyk@gentoo.org> emul-linux-x86-xlibs-1.1.ebuild:
  Repackaged baselibs, compiled with CFLAGS="-mcpu=athlon-xp -msse -msse2".
  X11R6.7 from x11-base/xorg-x11.

  29 Nov 2003; Brad House <brad_mssw@gentoo.org> files/75emul-linux-x86-x:
  forgot path for libGL.so.1 for environment

  04 Oct 2003; Brad House <brad_mssw@gentoo.org>
  emul-linux-x86-xlibs-1.0.ebuild:
  version the downloads

*emul-linux-x86-xlibs-1.0 (04 Oct 2003)

  04 Oct 2003; Brad House <brad_mssw@gentoo.org>
  emul-linux-x86-xlibs-1.0.ebuild, files/75emul-linux-x86-x:
  initial release
